objects/pw_cc__ValidatedField__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <fields>
        <fullName>pw_cc__AddressStatusFieldId__c</fullName>
        <label>Address Status Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__AddressStatusField__c</fullName>
        <label>Address Status Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__AllowOnlyListedCountries__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Only Listed Countries</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__CityFieldId__c</fullName>
        <label>City Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__CityField__c</fullName>
        <label>City Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryFieldId__c</fullName>
        <label>Country Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryField__c</fullName>
        <label>Country Field</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__CountryRelationshipField__c</fullName>
        <label>CountryRelationshipField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__EnableGeolocation__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>When enabled, geolocation fields (latitude and longitude) are shown in address edit mode.</inlineHelpText>
        <label>Enable geolocation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ForceMultiLine__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>When enabled additional rules are applied which force certain address parts always to the second street line.  This setting can help to keep addresses well formatted when line lengths are limited</inlineHelpText>
        <label>Force street address to multi-line</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__HasOwnerField__c</fullName>
        <defaultValue>false</defaultValue>
        <description>This field is used for internal purposes and does not store actual info.</description>
        <label>HasOwnerField</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__IsCountryMandatory__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Country is Mandatory</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__LatitudeRelationshipField__c</fullName>
        <label>Latitude Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__LocationLatitudeFieldId__c</fullName>
        <label>Location Latitude Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__LocationLatitudeField__c</fullName>
        <label>Location Latitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__LocationLongitudeFieldId__c</fullName>
        <label>Location Longitude Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__LocationLongitudeField__c</fullName>
        <label>Location Longitude Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__LongitudeRelationshipField__c</fullName>
        <label>Longitude Relationship Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Object__c</fullName>
        <label>Object Name</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__RecordType__c</fullName>
        <label>Record Type Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__Standardize__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Standardize</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__StateFieldId__c</fullName>
        <label>State Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__StateField__c</fullName>
        <label>State Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__StateRelationshipField__c</fullName>
        <label>StateRelationshipField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__StreetFieldId__c</fullName>
        <label>Street Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__StreetField__c</fullName>
        <label>Street Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__SubBuildingLine__c</fullName>
        <label>Sub-Building Lines</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__UseAdvancedQuery__c</fullName>
        <defaultValue>true</defaultValue>
        <inlineHelpText>Enabling this option will yield more precise address matching providing your data can support it</inlineHelpText>
        <label>Address is always in correct fields</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__UseForAddressValidation__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Support street-level Address Validation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeFieldId__c</fullName>
        <label>ZipCode Field Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeField__c</fullName>
        <label>ZIP Code Field</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>pw_cc__ZipCodeRelationshipField__c</fullName>
        <label>ZipCodeRelationshipField</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>CountryComplete Fields to Validate</label>
</CustomObject>